--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-database.js"></script>
 
 
     <script>
-      //Your web app's Firebase configuration
+      // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
+        apiKey: "AIzaSyA_JVnM7l7pVzHjJeJ_TUiS-S_S_TcsSDg",
+        authDomain: "class-38-2.firebaseapp.com",
+        databaseURL: "https://class-38-2-default-rtdb.firebaseio.com",
+        projectId: "class-38-2",
+        storageBucket: "class-38-2.appspot.com",
+        messagingSenderId: "922728004001",
+        appId: "1:922728004001:web:011c239587c5d80176b3e0"
       };
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
+    
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
